// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`idle-rule-patterns-form Renders \`idle-rule-patterns-form\` with custom props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  entity-attributes="[object Object]"
  entity-counters-type="true"
  some-required=""
  value="[object Object]"
  with-entity=""
/>
`;

exports[`idle-rule-patterns-form Renders \`idle-rule-patterns-form\` with default props 1`] = `
<c-patterns-field-stub
  alarm-attributes="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  both-counters="true"
  entity-attributes="[object Object]"
  some-required=""
  value="[object Object]"
  with-alarm="true"
  with-entity=""
/>
`;
